Added links to header and footer
Signed-off-by: Diego Salazar <rehrar@tuta.io>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
                   <div class="col">
                       <h4>resources</h4>
                       <ul>
-                          <li><a href="">Github</a></li>
-                          <li><a href="">Sourceforge</a></li>
+                          <li><a href="https://github.com/zcoinofficial">Github</a></li>
+                          <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
                           <li><a href="/branding/">Branding</a></li>
-                          <li><a href="">Vulnerability Program</a></li>
-                          <li><a href="">Explorer</a></li>
+                          <li><a href="https://zcoin.io/zcoin-vulnerability-bounty-program/">Vulnerability Program</a></li>
+                          <li><a href="https://explorer.zcoin.io/">Explorer</a></li>
                       </ul>
                   </div>
                   <div class="col">
@@ -33,7 +33,7 @@
                       <div class="social">
                           <h4>communication</h4>
                           <ul>
-                              <li><a href="" target="_blank"><i class="icon-twitter"></i></a></li>
+                              <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-facebook"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youtube"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-reddit"></i></a></li>
@@ -43,7 +43,7 @@
                       </div>
                   </div>
               </div>
-              <div class="row bottom">
+              <!--div class="row bottom">
                   <div class="col">
                       <span>
                           <select>
@@ -53,6 +53,6 @@
                           </select>
                       </span>
                   </div>
-              </div>
+              </div-->
           </div>
       </footer>
