--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
                        <li class="nav-item link"><a href="/blog/">Blog</a></li>
                        <li class="nav-item"><a href="">Crowdfunding</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="" target="_blank">Firo Crowdfunding System</a></li>
-                               <li><a class="sub-nav-item" href="" target="_blank">Open Collective</a></li>
+                               <li><a class="sub-nav-item" href="https://zcs.zcoin.io/" target="_blank">Firo Crowdfunding System</a></li>
+                               <li><a class="sub-nav-item" href="https://opencollective.com/firo" target="_blank">Open Collective</a></li>
                            </ul>
                        </li>
                    </ul>
@@ -65,8 +65,8 @@
                           <input class="burger-checkdropdown" id="list3" type="checkbox" tabindex="0">
                           <label for="list3">Crowdfunding</label>
                           <ul class="dropdown-content">
-                              <li><a href="">Firo Crowdfunding System</a></li>
-                              <li><a href="">Open Collective</a></li>
+                              <li><a href="https://zcs.zcoin.io/">Firo Crowdfunding System</a></li>
+                              <li><a href="https://opencollective.com/firo">Open Collective</a></li>
                           </ul>
                        </li>
                   </ul>
