--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
                   <div class="col">
                       <h4>resources</h4>
                       <ul>
-                          <li><a href="https://github.com/zcoinofficial">Github</a></li>
+                          <li><a href="https://github.com/firoorg/firo">Github</a></li>
                           <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
                           <li><a href="/branding/">Branding</a></li>
                           <li><a href="https://zcoin.io/zcoin-vulnerability-bounty-program/">Vulnerability Program</a></li>
@@ -35,10 +35,10 @@
                           <ul>
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-facebook"></i></a></li>
-                              <li><a href="" target="_blank"><i class="icon-youtube"></i></a></li>
+                              <li><a href="https://www.youtube.com/channel/UC4zOvMMqnBM_DLrtA4_XwGA" target="_blank"><i class="icon-youtube"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-reddit"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
-                              <li><a href="" target="_blank"><i class="icon-telegram"></i></a></li>
+                              <li><a href="https://t.me/firoproject" target="_blank"><i class="icon-telegram"></i></a></li>
                           </ul>
                       </div>
                   </div>
