--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,8 +34,8 @@
                           <h4>communication</h4>
                           <ul>
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
-                              <li><a href="" target="_blank"><i class="icon-facebook"></i></a></li>
-                              <li><a href="https://www.youtube.com/channel/UC4zOvMMqnBM_DLrtA4_XwGA" target="_blank"><i class="icon-youtube"></i></a></li>
+                              <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
+                              <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-reddit"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
                               <li><a href="https://t.me/firoproject" target="_blank"><i class="icon-telegram"></i></a></li>
