Add mining guide link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                                <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
                                <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
                                <li><a class="sub-nav-item" href="#">Earn Firo</a></li>
-                               <li><a class="sub-nav-item" href="#">Mine</a></li>
+                               <li><a class="sub-nav-item" href="/guide/how-to-mine.html">Mine</a></li>
                            </ul>
                        </li>
                        <li class="nav-item"><a href="#">About</a>
@@ -46,7 +46,7 @@
                               <li><a href="/get-firo/download/">Download wallets</a></li>
                               <li><a href="/get-firo/buy-firo/">Buy Firo</a></li>
                               <li><a href="#">Earn Firo</a></li>
-                              <li><a href="#">Mine Firo</a></li>
+                              <li><a href="/guide/how-to-mine.html">Mine Firo</a></li>
                           </ul>
                        </li>
                        <li class="mob-item">
