add mn guide and get-firo/download

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
                <nav class="row" role='navigation'>
                    <a class="logo col" href="/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
                    <ul class="main-menu col">
-                       <li class="nav-item"><a href="#">Get Firo</a>
+                       <li class="nav-item"><a href="/get-firo/download/">Get Firo</a>
                            <ul class="dropdown" aria-label="submenu">
                                <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
                                <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
-                               <li><a class="sub-nav-item" href="#">Earn Firo</a></li>
+                               <li><a class="sub-nav-item" href="/guide/masternode-setup.html">Earn Firo</a></li>
                                <li><a class="sub-nav-item" href="/guide/how-to-mine.html">Mine</a></li>
                            </ul>
                        </li>
