--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
                <nav class="row" role='navigation'>
                    <a class="logo col" href="/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
                    <ul class="main-menu col">
-                       <li class="nav-item"><a href="/get-firo/download/">Get Firo</a>
+                       <li class="nav-item"><a href="#">Get Firo</a>
                            <ul class="dropdown" aria-label="submenu">
                                <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
                                <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
