Add mn/mineguide (#22)
* Update index.html
* add mn guide and get-firo/download
* Update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                            <ul class="dropdown" aria-label="submenu">
                                <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
                                <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
-                               <li><a class="sub-nav-item" href="#">Earn Firo</a></li>
+                               <li><a class="sub-nav-item" href="/guide/masternode-setup.html">Earn Firo</a></li>
                                <li><a class="sub-nav-item" href="/guide/how-to-mine.html">Mine</a></li>
                            </ul>
                        </li>
