Change old links to new domain

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                           <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
                           <li><a href="/branding/">Branding</a></li>
                           <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">Vulnerability Program</a></li>
-                          <li><a href="https://explorer.zcoin.io/">Explorer</a></li>
+                          <li><a href="https://explorer.firo.org/">Explorer</a></li>
                       </ul>
                   </div>
                   <div class="col">
@@ -36,7 +36,7 @@
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
                               <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
-                              <li><a href="" target="_blank"><i class="icon-reddit"></i></a></li>
+                              <li><a href="https://www.reddit.com/r/FiroProject/" target="_blank"><i class="icon-reddit"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
                               <li><a href="https://t.me/firoproject" target="_blank"><i class="icon-telegram"></i></a></li>
                           </ul>
