--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
                        <li class="nav-item link"><a href="/blog/">Blog</a></li>
                        <li class="nav-item"><a href="">Crowdfunding</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="https://zcs.zcoin.io/" target="_blank">Firo Crowdfunding System</a></li>
+                               <li><a class="sub-nav-item" href="https://ccs.firo.org/" target="_blank">Firo Crowdfunding System</a></li>
                                <li><a class="sub-nav-item" href="https://opencollective.com/firo" target="_blank">Open Collective</a></li>
                            </ul>
                        </li>
@@ -65,7 +65,7 @@
                           <input class="burger-checkdropdown" id="list3" type="checkbox" tabindex="0">
                           <label for="list3">Crowdfunding</label>
                           <ul class="dropdown-content">
-                              <li><a href="https://zcs.zcoin.io/">Firo Crowdfunding System</a></li>
+                              <li><a href="https://ccs.firo.org/">Firo Crowdfunding System</a></li>
                               <li><a href="https://opencollective.com/firo">Open Collective</a></li>
                           </ul>
                        </li>
