Added translation junk

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,36 +2,35 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <h4>resources</h4>
+                      <h4>{% t footer.resources %}</h4>
                       <ul>
                           <li><a href="https://github.com/firoorg/firo">Github</a></li>
                           <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
-                          <li><a href="/branding/">Branding</a></li>
-                          <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">Vulnerability Program</a></li>
-                          <li><a href="https://explorer.firo.org/">Explorer</a></li>
+                          <li><a href="/branding/">{% t footer.branding %}</a></li>
+                          <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">{% t footer.vuln %}</a></li>
+                          <li><a href="https://explorer.firo.org/">{% t footer.explorer %}</a></li>
                       </ul>
                   </div>
                   <div class="col">
-                      <h4>website</h4>
+                      <h4>{% t footer.website %}</h4>
                       <ul>
-                          <li><a href="">Privacy Policy</a></li>
-                          <li><a href="">Terms of Service</a></li>
-                          <li><a href="">Impressum</a></li>
+                          <li><a href="">{% t footer.privacy %}</a></li>
+                          <li><a href="">{% t footer.tos %}</a></li>
                       </ul>
                   </div>
                   <div class="col">
                       <div>
-                          <h4>newsletter</h4>
-                          <p>If you want to subscribe to our newsletter, please submit the form.</p>
+                          <h4>{% t footer.newsletter %}</h4>
+                          <p>{% t footer.ifsub %}</p>
                           <form class="newsletter-form">
                             <fieldset>
-                              <input type="email" class="newsletter-email" placeholder="Email*">
-                              <button type="submit" class="newsletter-submit"><span>Subscribe</span></button>
+                              <input type="email" class="newsletter-email" placeholder="{% t footer.email %}*">
+                              <button type="submit" class="newsletter-submit"><span>{% t footer.sub %}</span></button>
                             </fieldset>
                           </form>
                       </div>
                       <div class="social">
-                          <h4>communication</h4>
+                          <h4>{% t footer.comm %}</h4>
                           <ul>
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
