Updated site with odds and ends - Removed Impressum - Added Lelantus audits to the tech page - Removed BitZ - Added privacy policy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
                   <div class="col">
                       <h4>{% t footer.website %}</h4>
                       <ul>
-                          <li><a href="">{% t footer.privacy %}</a></li>
+                          <li><a href="/privacy-policy/">{% t footer.privacy %}</a></li>
                           <li><a href="">{% t footer.tos %}</a></li>
                       </ul>
                   </div>
