Changed reddit and changed sourceforce

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                       <h4>{% t footer.resources %}</h4>
                       <ul>
                           <li><a href="https://github.com/firoorg/firo">Github</a></li>
-                          <li><a href="https://sourceforge.net/projects/zcoin/files/">Sourceforge</a></li>
+                          <li><a href="https://sourceforge.net/projects/firoorg/">Sourceforge</a></li>
                           <li><a href="/branding/">{% t footer.branding %}</a></li>
                           <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">{% t footer.vuln %}</a></li>
                           <li><a href="https://explorer.firo.org/">{% t footer.explorer %}</a></li>
@@ -35,7 +35,7 @@
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
                               <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
-                              <li><a href="https://www.reddit.com/r/FiroProject/" target="_blank"><i class="icon-reddit"></i></a></li>
+                              <li><a href="https://www.reddit.com/r/firoproject/" target="_blank"><i class="icon-reddit"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
                               <li><a href="https://t.me/firoproject" target="_blank"><i class="icon-telegram"></i></a></li>
                           </ul>
