Ad xpoolx to mining guide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                               <li><a href="/get-firo/download/">Download wallets</a></li>
                               <li><a href="/get-firo/buy-firo/">Buy Firo</a></li>
                               <li><a href="#">Earn Firo</a></li>
-                              <li><a href="/guide/how-to-mine.html">Mine Firo</a></li>
+                              <li><a href="/guide/how-to-mine-firo.html">Mine Firo</a></li>
                           </ul>
                        </li>
                        <li class="mob-item">
