update mining guide link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                                <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
                                <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
                                <li><a class="sub-nav-item" href="/guide/masternode-setup.html">Earn Firo</a></li>
-                               <li><a class="sub-nav-item" href="/guide/how-to-mine.html">Mine</a></li>
+                               <li><a class="sub-nav-item" href="/guide/how-to-mine-firo.html">Mine</a></li>
                            </ul>
                        </li>
                        <li class="nav-item"><a href="#">About</a>
