--- a/css/style.css
+++ b/css/style.css
@@ -2733,7 +2733,8 @@ a.btn-primary, a.btn-secondary {
 }
 
 .blog-section .col.post-page .post-body img {
-    margin-bottom: -1rem;
+    max-width: 100%;
+    width: auto;
 }
 
 .blog-section .col.post-page .post-body h2 {
@@ -2788,6 +2789,13 @@ a.btn-primary, a.btn-secondary {
 .blog-section .col.post-page .post-body ul {
     list-style: disc;
     list-style-position: inside;
+    margin-top: 1rem;
+}
+
+.blog-section ol, .guide-section ol {
+    list-style: decimal;
+    margin-left: 2rem;
+    margin-top: 1rem;
 }
 
 .blog-section .col.post-page .post-body ul li, .blog-section .col.post-page .post-body ol li {
@@ -2858,6 +2866,41 @@ a.btn-primary, a.btn-secondary {
     
 .blog-section .col.post-section a.post-link h2, .blog-section .post-page h1 {
     font-size: 2rem;
+}
+    
+}
+
+/*guide*/
+
+.guide-section .container {
+    width: 69.5rem;
+}
+
+.guide-section img {
+    width: auto;
+    max-width: 100%;
+}
+
+@media only screen and (max-width: 75rem) {
+    
+.guide-section .container {
+    width: 61rem;
+}
+    
+}
+
+@media only screen and (max-width: 62rem) {
+    
+.guide-section .container {
+    width: 46rem;
+}
+    
+}
+
+@media only screen and (max-width: 48rem) {
+    
+.guide-section .container {
+    width: 100%;
 }
     
 }
