--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,8 @@
                        </li>
                        <li class="nav-item link"><a href="/community/">Community</a>
                        </li>
+                       <li class="nav-item link"><a href="/guide/">Guides</a>
+                       </li>
                        <li class="nav-item link"><a href="/blog/">Blog</a></li>
                        <li class="nav-item"><a href="">Crowdfunding</a>
                            <ul class="dropdown" aria-label="submenu">
@@ -60,6 +62,7 @@
                           </ul>
                        </li>
                       <li class="mob-item"><a href="/community/">Community</a></li>
+                      <li class="mob-item"><a href="/guide/">Guides</a></li>
                       <li class="mob-item"><a href="/blog/">Blog</a></li>
                        <li class="mob-item">
                           <input class="burger-checkdropdown" id="list3" type="checkbox" tabindex="0">
