--- a/css/style.css
+++ b/css/style.css
@@ -2595,6 +2595,7 @@ a.btn-primary, a.btn-secondary {
   padding-bottom: 3rem;
   padding-left: 3.125rem;
   padding-top: 3rem;
+  padding-right: 2rem;
   position: relative;
 }
 
@@ -2610,19 +2611,25 @@ a.btn-primary, a.btn-secondary {
   top: 0;
 }
 .timeline .event:after {
-  box-shadow: 0 0 0 4px #9b1c2e;
-  left: -7.5px;
+  border: 4px solid #9b1c2e;
+  left: -12.5px;
   background: #ffffff;
   border-radius: 50%;
-  height: 11px;
-  width: 11px;
+  height: 14px;
+  width: 14px;
   content: "";
   top: 45%;
 }
 
 .timeline .event.done:after {
   background: #9b1c2e;
-  box-shadow: 0 0 0 4px #9b1c2e;
+}
+
+.timeline .event p {
+    padding-top: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #636060;
 }
 
 .road-more {
@@ -2639,6 +2646,10 @@ a.btn-primary, a.btn-secondary {
 .timeline h3 {
     font-size: 1.2rem;
     line-height: 1.5;
+}
+    
+.timeline .event p {
+    font-size: 1rem;
 }
     
 }
