Initial Chinese localization

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,15 +6,15 @@
                       <ul>
                           <li><a href="https://github.com/firoorg/firo">Github</a></li>
                           <li><a href="https://sourceforge.net/projects/firoorg/">Sourceforge</a></li>
-                          <li><a href="/branding/">{% t footer.branding %}</a></li>
-                          <li><a href="https://firo.org/2018/07/15/firo-vulnerability-bounty-program.html">{% t footer.vuln %}</a></li>
+                          <li><a href="{{ site.baseurl }}/branding/">{% t footer.branding %}</a></li>
+                          <li><a href="{{ site.baseurl }}/2018/07/15/firo-vulnerability-bounty-program.html">{% t footer.vuln %}</a></li>
                           <li><a href="https://explorer.firo.org/">{% t footer.explorer %}</a></li>
                       </ul>
                   </div>
                   <div class="col">
                       <h4>{% t footer.website %}</h4>
                       <ul>
-                          <li><a href="/privacy-policy/">{% t footer.privacy %}</a></li>
+                          <li><a href="{{ site.baseurl }}/privacy-policy/">{% t footer.privacy %}</a></li>
                           <li><a href="">{% t footer.tos %}</a></li>
                       </ul>
                   </div>
