--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,39 +1,39 @@
 <header>
       <div class="container">
                <nav class="row" role='navigation'>
-                   <a class="logo col" href="/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
+                   <a class="logo col" href="{{ site.baseurl }}/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
                    <ul class="main-menu col">
-                       <li class="nav-item"><a href="#">Get Firo</a>
+                       <li class="nav-item"><a href="#">{% t navigation.getfiro %}</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="/get-firo/download/">Download wallets</a></li>
-                               <li><a class="sub-nav-item" href="/get-firo/buy-firo/">Buy Firo</a></li>
-                               <li><a class="sub-nav-item" href="/guide/masternode-setup.html">Earn Firo</a></li>
-                               <li><a class="sub-nav-item" href="/guide/how-to-mine-firo.html">Mine</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/get-firo/download/">{% t navigation.download %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/get-firo/buy-firo/">{% t navigation.buyfiro %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/guide/masternode-setup.html">{% t navigation.earnfiro %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/guide/how-to-mine-firo.html">{% t navigation.mine %}</a></li>
                            </ul>
                        </li>
-                       <li class="nav-item"><a href="#">About</a>
+                       <li class="nav-item"><a href="#">{% t navigation.about %}</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="/about/tech/">Tech</a></li>
-                               <li><a class="sub-nav-item" href="/about/team/">Team</a></li>
-                               <li><a class="sub-nav-item" href="/about/roadmap/">Roadmap</a></li>
-                               <li><a class="sub-nav-item" href="/about/faq/">FAQ</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/about/tech/">{% t navigation.tech %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/about/team/">{% t navigation.team %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/about/roadmap/">{% t navigation.roadmap %}</a></li>
+                               <li><a class="sub-nav-item" href="{{ site.baseurl }}/about/faq/">{% t navigation.faq %}</a></li>
                            </ul>
                        </li>
-                       <li class="nav-item link"><a href="/community/">Community</a>
+                       <li class="nav-item link"><a href="{{ site.baseurl }}/community/">{% t navigation.community %}</a>
                        </li>
-                       <li class="nav-item link"><a href="/guide/">Guides</a>
+                       <li class="nav-item link"><a href="{{ site.baseurl }}/guide/">{% t navigation.guides %}</a>
                        </li>
-                       <li class="nav-item link"><a href="/blog/">Blog</a></li>
-                       <li class="nav-item"><a href="">Crowdfunding</a>
+                       <li class="nav-item link"><a href="{{ site.baseurl }}/blog/">{% t navigation.blog %}</a></li>
+                       <li class="nav-item"><a href="#">{% t navigation.crowdfunding %}</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="https://ccs.firo.org/" target="_blank">Firo Crowdfunding System</a></li>
-                               <li><a class="sub-nav-item" href="https://opencollective.com/firo" target="_blank">Open Collective</a></li>
+                               <li><a class="sub-nav-item" href="https://ccs.firo.org/" target="_blank">{% t navigation.fcs %}</a></li>
+                               <li><a class="sub-nav-item" href="https://opencollective.com/firo" target="_blank">{% t navigation.opencollective %}</a></li>
                            </ul>
                        </li>
                    </ul>
                </nav>
                <nav role='navigation' class="mobile-menu row">
-                  <a class="logo-mobile col" href="/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
+                  <a class="logo-mobile col" href="{{ site.baseurl }}/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
                   <input class="burger-check" id="mobile-burger" type="checkbox">
                   <label for="mobile-burger" class="hamburger hamburger--spring">
                     <span class="hamburger-box">
@@ -43,33 +43,33 @@
                   <ul class="slide-nav">
                        <li class="mob-item">
                           <input class="burger-checkdropdown" id="list1" type="checkbox" tabindex="0">
-                          <label for="list1">Get Firo</label>
+                          <label for="list1">{% t navigation.getfiro %}</label>
                           <ul class="dropdown-content">
-                              <li><a href="/get-firo/download/">Download wallets</a></li>
-                              <li><a href="/get-firo/buy-firo/">Buy Firo</a></li>
-                              <li><a href="#">Earn Firo</a></li>
-                              <li><a href="/guide/how-to-mine-firo.html">Mine Firo</a></li>
+                              <li><a href="{{ site.baseurl }}/get-firo/download/">{% t navigation.download %}</a></li>
+                              <li><a href="{{ site.baseurl }}/get-firo/buy-firo/">{% t navigation.buyfiro %}</a></li>
+                              <li><a href="{{ site.baseurl }}/guide/masternode-setup.html">{% t navigation.earnfiro %}</a></li>
+                              <li><a href="{{ site.baseurl }}/guide/how-to-mine-firo.html">{% t navigation.mine %}</a></li>
                           </ul>
                        </li>
                        <li class="mob-item">
                           <input class="burger-checkdropdown" id="list2" type="checkbox" tabindex="0">
-                          <label for="list2">About</label>
+                          <label for="list2">{% t navigation.about %}</label>
                           <ul class="dropdown-content">
-                              <li><a href="/about/tech/">Tech</a></li>
-                              <li><a href="/about/team/">Team</a></li>
-                              <li><a href="/about/roadmap/">Roadmap</a></li>
-                              <li><a href="/about/faq/">FAQ</a></li>
+                              <li><a href="{{ site.baseurl }}/about/tech/">{% t navigation.tech %}</a></li>
+                              <li><a href="{{ site.baseurl }}/about/team/">{% t navigation.team %}</a></li>
+                              <li><a href="{{ site.baseurl }}/about/roadmap/">{% t navigation.roadmap %}</a></li>
+                              <li><a href="{{ site.baseurl }}/about/faq/">{% t navigation.faq %}</a></li>
                           </ul>
                        </li>
-                      <li class="mob-item"><a href="/community/">Community</a></li>
-                      <li class="mob-item"><a href="/guide/">Guides</a></li>
-                      <li class="mob-item"><a href="/blog/">Blog</a></li>
+                      <li class="mob-item"><a href="{{ site.baseurl }}/community/">{% t navigation.community %}</a></li>
+                      <li class="mob-item"><a href="{{ site.baseurl }}/guide/">{% t navigation.guides %}</a></li>
+                      <li class="mob-item"><a href="{{ site.baseurl }}/blog/">{% t navigation.blog %}</a></li>
                        <li class="mob-item">
                           <input class="burger-checkdropdown" id="list3" type="checkbox" tabindex="0">
-                          <label for="list3">Crowdfunding</label>
+                          <label for="list3">{% t navigation.crowdfunding %}</label>
                           <ul class="dropdown-content">
-                              <li><a href="https://ccs.firo.org/">Firo Crowdfunding System</a></li>
-                              <li><a href="https://opencollective.com/firo">Open Collective</a></li>
+                              <li><a href="https://ccs.firo.org/">{% t navigation.fcs %}</a></li>
+                              <li><a href="https://opencollective.com/firo">{% t navigation.opencollective %}</a></li>
                           </ul>
                        </li>
                   </ul>
