--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }} | {% t global.title %}</title>
+    <title>{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
+      {% else %}{{ page.title }} | {% t global.title %}{% endif %}</title>
     <meta name="author" content="">
     <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
     <meta property="og:image" content="https://">
