Fix og:image meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }} | {% t global.title %}</title>
     <meta name="author" content="">
     <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
-    <meta property="og:image" content="https://">
+    <meta property="og:image" content="{{ site.url }}/img/firo-icon.png">
     <meta property="og:description" content="Firo is a digital currency with a focus on setting privacy standards.">
     <meta property="og:title" content="Firo">
     <meta name="twitter:title" content="Firo">
