--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
     <title>{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
       {% else %}{{ page.title }} | {% t global.title %}{% endif %}</title>
     <meta name="author" content="">
-    <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
+    <meta name="description" content="{% t global.description %}">
     <meta property="og:image" content="https://">
-    <meta property="og:description" content="Firo is a digital currency with a focus on setting privacy standards.">
+    <meta property="og:description" content="{% t global.description %}">
     <meta property="og:title" content="Firo">
     <meta name="twitter:title" content="Firo">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
