--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,10 @@
       {% else %}{{ page.title }} | {% t global.title %}{% endif %}</title>
     <meta name="author" content="">
     <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
-    <meta property="og:image" content="https://">
+    <meta property="og:image" content="{{page.img}}">
     <meta property="og:description" content="Firo is a digital currency with a focus on setting privacy standards.">
-    <meta property="og:title" content="Firo">
-    <meta name="twitter:title" content="Firo">
+    <meta property="og:title" content="{{page.title}}">
+    <meta name="twitter:title" content="{{page.title}}">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/meta/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/meta/favicon-32x32.png">
