--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,10 @@
     <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
     <meta property="og:image" content="{{page.img}}">
     <meta property="og:description" content="Firo is a digital currency with a focus on setting privacy standards.">
-    <meta property="og:title" content="{{page.title}}">
-    <meta name="twitter:title" content="{{page.title}}">
+    <meta property="og:title" content="{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
+      {% else %}{{ page.title }} | {% t global.title %}{% endif %}">
+    <meta name="twitter:title" content="{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
+      {% else %}{{ page.title }} | {% t global.title %}{% endif %}">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/meta/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/meta/favicon-32x32.png">
