--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
     <meta name="description" content="Firo is a digital currency with a focus on setting privacy standards.">
     <meta property="og:image" content="{{page.img}}">
-    <meta property="og:description" content="Firo is a digital currency with a focus on setting privacy standards.">
+    <meta property="og:description" content="{% if page.summary %} {{page.summary}} {%else%}Firo is a digital currency with a focus on setting privacy standards.{% endif %}">
     <meta property="og:title" content="{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
       {% else %}{{ page.title }} | {% t global.title %}{% endif %}">
     <meta name="twitter:title" content="{% if page.title contains "titles." %}{% t page.title %} | {% t global.title %}
